Fixed wrapping specifically for home

--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,7 @@ footer {
 	padding-top: 15px;
 	font-size: 20px;
 	height: 150px;
-	min-width: 960px;
+	min-width: 1080px;
 }
 
 footer .col-sm-4 {
@@ -70,8 +70,8 @@ footer .col-sm-4 {
 	left: 275px;
 }
 
-#description {
-	margin: 50px;
+#descriptionpics {
+	margin-top: 20px;
 	align-items: center;
 }
 
@@ -93,7 +93,7 @@ footer .col-sm-4 {
 	float: none;*/
 }
 
-#description h1 {
+#descriptionpics h1 {
 	position: absolute;
 	top: 45%;
 	left:50%;
@@ -280,6 +280,13 @@ header .active {
 .jumbotron {
 	height: 500px;
 	background-color: black;
+}
+
+#contentwrapper {
+	height: auto;
+	min-height: 100%;
+	min-width: 1080px;
+	box-sizing: border-box;
 }
 
 .btn:focus, .btn:active {
